# memgraph-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
bolt-protocol/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: basic_request.rs  varint.rs
licenses/: BSL.txt
memgraph-client/: Cargo.toml
memgraph-client/src/: lib.rs
open-cypher/: Cargo.toml
open-cypher/src/: lib.rs
src/: common.rs  coordinator.rs  io.rs  lib.rs  machine_manager.rs  metadata.rs  net.rs  rsm.rs  serialization.rs  shard.rs  simulator.rs  varint.rs
tests/: basic_request.rs  license_check.rs  rsm.rs  serialization.rs
