[package]
name = "memgraph"
version = "0.1.1"
edition = "2021"
license = "BUSL-1.1"
description = "graph database built for teams who expect highly performant, advanced analytical insights"
authors = ["Memgraph Contributors <tech@memgraph.com>"]
categories = [ "database-implementations" ]
keywords = ["db", "database", "graph", "distributed", "neo4j"]

[features]
simulator = []

[workspace]
members = ["memgraph-client", "open-cypher", "bolt-protocol"]

[dependencies]
bincode = "1.3.3"
crc32fast = "1.3.2"
extreme = "666.666.666666"
rocksdb = "0.20.1"
serde = { version = "1.0.152", features = ["derive"] }
