[package]
name = "memgraph"
version = "0.1.1"
edition = "2021"
license = "BUSL-1.1"
description = "graph database built for teams who expect highly performant, advanced analytical insights"
authors = ["Memgraph Contributors <tech@memgraph.com>"]
categories = [ "database-implementations" ]
keywords = ["db", "database", "graph", "distributed", "neo4j"]

[features]
simulator = []

[workspace]
members = ["memgraph-client", "open-cypher", "bolt-protocol"]

[dependencies]
bincode = "1.3.3"
crc32fast = "1.3.2"
futures = { version = "0.3.26", features = ["executor"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rocksdb = "0.20.1"
serde = { version = "1.0.152", features = ["derive"] }
