[package]
name = "memgraph-client"
version = "0.1.1"
edition = "2021"
license = "BUSL-1.1"
description = "client for the graph database built for teams who expect highly performant, advanced analytical insights"
authors = ["Tyler Neely <tylerneely@gmail.com>", "Memgraph Core Team <core@memgraph.io>"]
categories = [ "database-implementations" ]
keywords = ["db", "database", "graph", "distributed", "neo4j"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
crc32fast = "1.3.2"
